--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
