--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "dotenv": "^16.4.7",
+    "frontend": "file:",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
