--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.4.7",
     "frontend": "file:",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0"
